# artscii-desktop

./: CMakeLists.txt
core/: img_manager.cpp  img_manager.h
src/: main.cpp
